--- a/index.html
+++ b/index.html
@@ -129,9 +129,8 @@
           <h1>WTF is JAWS-SG?</h1>
           <amp-img src="assets/jaw.png"
               width="200" height="200"
-              layout="fixed" style="margin-top: 30px; margin-bottom: 30px;">
+              layout="fixed">
           </amp-img>
-          <br>
           <p>We are the student brunch of the JAWS in Japan. Our aim is to spread AWS to students and share information between students.</p>
         </amp-story-grid-layer>
       </amp-story-page>
@@ -172,7 +171,7 @@
           <h1>Let's join Slack Channel</h1>
           <amp-img src="assets/slack-logo.png"
               width="300" height="77"
-              layout="fixed" style="margin-top: 50px; margin-bottom: 50px;">
+              layout="fixed">
           </amp-img>
         </amp-story-grid-layer>
         <amp-story-page-attachment layout="nodisplay" data-cta-text="Join Slack Channel">
@@ -183,7 +182,7 @@
                 height="276"
                 layout="responsive">
               </amp-img>
-              <p style="color: black; margin: 20px;">Let's start your jurney to AWS 🚀🚀🚀</p>
+              <p style="color: black;">Let's start your jurney to AWS 🚀🚀🚀</p>
               <amp-img src="../assets/slack-black.png" width="300"
                 height="130"
                 layout="responsive"></amp-img>
