--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Raleway">
     <script async src="https://cdn.ampproject.org/v0.js"></script>
     <script async custom-element="amp-story" src="https://cdn.ampproject.org/v0/amp-story-1.0.js"></script>
-    <script async custom-element="amp-form" src="https://cdn.ampproject.org/v0/amp-form-0.1.js"></script>
-    <script async custom-template="amp-mustache" src="https://cdn.ampproject.org/v0/amp-mustache-0.2.js"></script>
+    <script async custom-element="amp-iframe" src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"></script>
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
     <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
     <style amp-custom>
@@ -27,7 +26,7 @@
         line-height: 1.174;
       }
       p {
-        font-weight: normal;
+        font-weight:bold;
         font-size: 1.3em;
         line-height: 1.5em;
         color: #fff;
@@ -126,12 +125,12 @@
     supports-landscape>
       <amp-story-page id="cover" auto-advance-after="10s">
         <amp-story-grid-layer template="thirds" style="background-image:linear-gradient(315deg, #fc9842 0%, #fe5f75 74%); background-color: #fc9842;">
-          <h1 grid-area="upper-third">WTF is JAWS-SG?</h1>
+          <h1 grid-area="upper-third" animate-in="whoosh-in-left">"WTF is JAWS-SG?"</h1>
           <amp-img src="assets/jaw.png"
               width="200" height="200"
-              layout="fixed" grid-area="middle-third">
+              layout="fixed" grid-area="middle-third" animate-in="whoosh-in-right">
           </amp-img>
-          <p grid-area="lower-third">We are the student brunch of the JAWS in Japan. Our aim is to spread AWS to students and share information between students.</p>
+          <p grid-area="lower-third" animate-in="fly-in-bottom" style="text-align: center;">"We are the student brunch of the JAWS in Japan. Our aim is to spread AWS to students and share information between students"</p>
         </amp-story-grid-layer>
       </amp-story-page>
 
@@ -139,11 +138,12 @@
         <amp-story-grid-layer template="fill">
           <amp-img src="assets/junction.jpg"
           width="720" height="1280"
-          layout="responsive"></amp-img>
+          layout="responsive" animate-in="pan-right"
+          animate-in-duration="4s"></amp-img>
         </amp-story-grid-layer>
         <amp-story-grid-layer template="thirds">
-          <h1 style="text-align: right">JUNCTION</h1>
-          <p grid-area="lower-third">We can share information for cutting-edge technologies, and we can complement each other with your speciality. We are waiting for your intervention.</p>
+          <h1 style="text-align: right; margin-top: 80px;" animate-in="fly-in-top">"JUNCTION"</h1>
+          <p style="margin-top: 80px;" animate-in="whoosh-in-left">"We can share information for cutting-edge technologies, and we can complement each other with your speciality. We are waiting for your intervention"</p>
         </amp-story-grid-layer>
       </amp-story-page>
 
@@ -151,13 +151,12 @@
         <amp-story-grid-layer template="fill">
             <amp-img src="assets/photovr.jpg"
             width="720" height="1280"
-            layout="responsive"></amp-img>
+            layout="responsive" animate-in="pan-left"
+            animate-in-duration="4s"></amp-img>
           </amp-story-grid-layer>
-        <amp-story-grid-layer template="vertical">
-          <h1>Curiosity</h1>
-        </amp-story-grid-layer>
-        <amp-story-grid-layer template="vertical" class="bottom">
-          <p>Keep your curiosity door opened. Let's explore what you don't know that you don't know. </p>
+        <amp-story-grid-layer template="thirds">
+          <h1 animate-in="fly-in-top" style="margin-top: 80px;">"Curiosity"</h1>
+          <p style="margin-top: 80px;" animate-in="whoosh-in-right">"Keep your curiosity door opening. Let's explore what you don't know that you don't know. What you need to worry is only the chance you miss, instead failure"</p>
         </amp-story-grid-layer>
       </amp-story-page>
 
@@ -167,16 +166,30 @@
             width="720" height="1280"
             layout="responsive"></amp-img>
         </amp-story-grid-layer>
-        <amp-story-grid-layer template="thirds">
-          <h1>Let's join Slack Channel</h1>
+        <amp-story-grid-layer template="vertical">
+          <h1 style="margin-top: 30px;" animate-in="whoosh-in-left">Let's join Slack Channel</h1>
           <amp-img src="assets/slack-logo.png"
               width="300" height="77"
-              layout="fixed">
+              layout="fixed" style="margin-top: 60px;" animate-in="whoosh-in-right">
           </amp-img>
-          <a grid-area="lower-third" href="https://slackinvite.funabashi800.now.sh/" style="text-decoration: none;" class="submitbtn" style="text-align: center; font-size:30px; margin: 0 auto; cursor: pointer;">
-            JOIN SLACK CHANNEL
-          </a> 
+          <p></p> 
         </amp-story-grid-layer>
+        <amp-story-page-attachment layout="nodisplay" data-cta-text="Join Slack Channel">
+          <amp-iframe width="1000"
+            height="2000"
+            title="Join JAWS-SG Slack Chanel"
+            layout="responsive"
+            sandbox="allow-scripts allow-same-origin allow-popups"
+            allowfullscreen
+            frameborder="0"
+            src="https://slackinvite.funabashi800.now.sh/">
+            <amp-img layout="fixed"
+            src="assets/loading.gif"
+            width="200"
+            height="200"
+            placeholder style="margin-top: 50%;"></amp-img>
+          </amp-iframe>
+        </amp-story-page-attachment>
       </amp-story-page>
       <amp-story-bookend src="bookend.json" layout=nodisplay>
       </amp-story-bookend>
