--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <amp-story-grid-layer template="thirds" style="background-image:linear-gradient(315deg, #fc9842 0%, #fe5f75 74%); background-color: #fc9842;">
           <h1 grid-area="upper-third" animate-in="whoosh-in-left">"WTF is JAWS-SG?"</h1>
           <amp-img src="assets/jaw.png"
-              width="200" height="200"
+              width="100" height="100"
               layout="fixed" grid-area="middle-third" animate-in="whoosh-in-right">
           </amp-img>
           <p grid-area="lower-third" animate-in="fly-in-bottom" style="text-align: center;">"We are the student brunch of the JAWS in Japan. Our aim is to spread AWS to students and share information between students"</p>
@@ -156,7 +156,7 @@
           </amp-story-grid-layer>
         <amp-story-grid-layer template="thirds">
           <h1 animate-in="fly-in-top" style="margin-top: 80px;">"Curiosity"</h1>
-          <p style="margin-top: 80px;" animate-in="whoosh-in-right">"Keep your curiosity door opening. Let's explore what you don't know that you don't know. What you need to worry is only the chance you miss, instead failure"</p>
+          <p style="text-align: right; margin-top: 80px;" animate-in="whoosh-in-right">"Keep your curiosity door opening. Let's explore what you don't know that you don't know. What you need to worry is only the chance you miss, instead failure"</p>
         </amp-story-grid-layer>
       </amp-story-page>
 
