--- a/index.html
+++ b/index.html
@@ -175,19 +175,18 @@
           <p></p> 
         </amp-story-grid-layer>
         <amp-story-page-attachment layout="nodisplay" data-cta-text="Join Slack Channel">
-          <amp-iframe width="1000"
-            height="2000"
+          <amp-iframe width="100"
+            height="200"
             title="Join JAWS-SG Slack Chanel"
             layout="responsive"
-            sandbox="allow-scripts allow-same-origin allow-popups"
+            sandbox="allow-scripts allow-same-origin"
             allowfullscreen
-            frameborder="0"
             src="https://slackinvite.funabashi800.now.sh/">
             <amp-img layout="fixed"
             src="assets/loading.gif"
             width="200"
             height="200"
-            placeholder style="margin-top: 50%;"></amp-img>
+            placeholder style="margin-top: 10%"></amp-img>
           </amp-iframe>
         </amp-story-page-attachment>
       </amp-story-page>
