--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
               width="160" height="160"
               layout="fixed" grid-area="middle-third" animate-in="whoosh-in-right">
           </amp-img>
-          <p grid-area="lower-third" animate-in="fly-in-bottom" style="text-align: center;">"We are the student brunch of the JAWS in Japan. Our aim is to spread AWS to students and share information between students"</p>
+          <p grid-area="lower-third" animate-in="fly-in-bottom" style="text-align: center;">"We are the student branch of the JAWS in Japan. Our aim is to have more students engaged in AWS."</p>
         </amp-story-grid-layer>
       </amp-story-page>
 
@@ -162,7 +162,7 @@
         </amp-story-grid-layer>
         <amp-story-grid-layer template="thirds">
           <h1 style="text-align: right; margin-top: 80px;" animate-in="fly-in-top">"JUNCTION"</h1>
-          <p style="margin-top: 80px;" animate-in="whoosh-in-left">"We can share information for cutting-edge technologies, and we can complement each other with your speciality. We are waiting for your intervention"</p>
+          <p style="margin-top: 80px;" animate-in="whoosh-in-left">"We can share information for cutting-edge technologies, and we can help each other with your speciality. We are waiting for your participation."</p>
         </amp-story-grid-layer>
       </amp-story-page>
 
@@ -175,7 +175,7 @@
           </amp-story-grid-layer>
         <amp-story-grid-layer template="thirds">
           <h1 animate-in="fly-in-top" style="margin-top: 80px;">"Curiosity"</h1>
-          <p style="text-align: right; margin-top: 80px;" animate-in="whoosh-in-right">"Keep your curiosity door opening. Let's explore what you don't know that you don't know. What you need to worry is only the chance you miss, instead failure"</p>
+          <p style="text-align: right; margin-top: 80px;" animate-in="whoosh-in-right">"Keep your curiosity door open. Let's explore what you don't know that you don't know. No need to worry about failurue, but a chance you may have missed."</p>
         </amp-story-grid-layer>
       </amp-story-page>
 
