--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
     <meta property="og:title" content="JAWS-StudentGroup(JAWS-SG)">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://jaws-sg.now.sh/assets/jaws.png">
-    <meta property="og:image" content="assets/jaw.png">
+    <meta property="og:url" content="https://jaws-sg.now.sh">
+    <meta property="og:image" content="https://jaws-sg.now.sh/assets/jaws.png">
     <meta property="og:description" content="JAWS-UG（AWS Users Group – Japan）はAWS( http://aws.amazon.com/jp/ ) を多くの方に知っていただき、活用を推進するために非営利目的で活動をしているユーザーグループです。一人ではできない学びや交流を目的としてボランティアによる勉強会の開催や交流イベントなどを行なっています。 ## JAWS-SGとは JAWS-StudentGroup(JAWS-SG)は、日本のAWSユーザーグループの学生支部のことです。 学生にAWSを広め、学生間で情報の共有を行うことを目的としており、AWSに興味のある学生なら誰でも参加することができます。" />
     <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
     <style amp-custom>
