--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script async custom-element="amp-iframe" src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"></script>
     <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-    <meta property="og:title" content="JAWS-StudentGroup(JAWS-SG)">
+    <meta property="og:title" content="JAWS Student Group">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://jaws-sg.now.sh">
     <meta property="og:image" content="https://jaws-sg.now.sh/assets/jaws.png">
